完成盛最多水的容器题解

--- a/算法.md
+++ b/算法.md
@@ -33,3 +33,11 @@
 图的遍历：时间复杂度是多少？O(n)
 搜索算法：DFS 和 BFS 时间复杂度是多少？O(1)
 二分查找：时间复杂度是多少？O(log n)
+
+leetCode 刷题步骤：
+1. 读题，思考 5-10 分钟，将所有的思路都列出来（没有思路直接看题解）
+2. 写代码，解题，提交代码
+3. 看官方题解和其他人的题解方法
+4. 到国际站看 votes 最高的题解
+
+每个题目重复 5 遍，5 遍刷题法
