--- a/算法.md
+++ b/算法.md
@@ -41,3 +41,8 @@ leetCode 刷题步骤：
 4. 到国际站看 votes 最高的题解
 
 每个题目重复 5 遍，5 遍刷题法
+第一次：仔细研究所有的题解，并能默写完成
+第二次：隔一个星期后，再练习一次
+第三次：隔一个月后再练习一次
+第四次：隔 2 个月再练习一次
+第五次：面试前 1 周
